# musicore

./: .commit-msg.txt  .dockerignore  .gitattributes  .gitignore  .pr-body.md  FEATURES.md  LICENSE  PLUGINS.md  PR-015-description.md  PR-021-description.md  PR-023-description.md  PR-033-description.md  PR-037-description.md  PR-050-description.md  PR-350-description.md  README.md  VERSIONING.md  commit-msg-008-plan.txt  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: DEPLOYMENT.md
android/: RELEASE.md  store-listing.md
backend/: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  music
backend/assets/: bravura_metadata.json
backend/benches/: layout_bench.rs  midi_latency.rs
backend/examples/: create_c_major_scale.rs  create_piano_two_hands.rs
backend/scripts/: build-wasm.sh
backend/src/: lib.rs  main.rs  midi_prototype.rs
backend/src/adapters/: dtos.rs  mod.rs
backend/src/adapters/api/: errors.rs  handlers.rs  import.rs  mod.rs  routes.rs
backend/src/adapters/persistence/: in_memory.rs
backend/src/adapters/wasm/: bindings.rs  error_handling.rs  mod.rs
backend/src/domain/: errors.rs  ids.rs  instrument.rs  mod.rs  score.rs  staff.rs  value_objects.rs  voice.rs
backend/src/domain/events/: clef.rs  global.rs  key_signature.rs  mod.rs  note.rs  staff.rs  tempo.rs  time_signature.rs
backend/src/domain/importers/musicxml/: compression.rs  converter.rs  errors.rs  mapper.rs  mod.rs  parser.rs  timing.rs  types.rs
backend/src/layout/: README.md  annotations.rs  batcher.rs  beams.rs  breaker.rs  extraction.rs  metrics.rs  mod.rs  note_layout.rs  positioner.rs  spacer.rs  stems.rs  types.rs  wasm.rs
backend/src/ports/: importers.rs  mod.rs  persistence.rs
backend/tests/: api_clef_serialization_test.rs  api_integration_test.rs  bach_incoming_ties_test.rs  bach_slur_test.rs  bracket_centering_test.rs  canon_d_beam_test.rs  chord_dots_test.rs  clef_diag_test.rs  contract_test.rs  cross_score_consistency_test.rs  debug_m2_slur_test.rs  determinism_test.rs  grace_note_layout_test.rs  instrument_test.rs  layout_integration_test.rs  layout_test.rs  m21_accidental_test.rs  m63_layout_diagnostic.rs  musicxml_import_test.rs  nocturne_m29_m37_test.rs  notation_dots_test.rs  note_test.rs  phases_4_7_test.rs  repository_test.rs  score_test.rs  slur_direction_test.rs  smufl_codepoint_test.rs  staff_test.rs  validation_test.rs  value_objects_test.rs  voice_test.rs
backend/tests/fixtures/: generate_100_measures.py  piano_100_measures.json  piano_200_measures.json  piano_30_measures_dense.json  piano_50_measures.json  piano_8_measures.json  violin_10_measures.json
backend/tests/integration/: cli_import_test.sh
(+830 files in other folders)
