[package]
name = "musicore-backend"
version = "0.1.0"
edition = "2024"

[lib]
# Enable library compilation (in addition to binary) for WASM
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt as it requires additional configuration for bulk memory features
wasm-opt = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# XML parsing for MusicXML import
quick-xml = "0.31"

# WASM dependencies (conditional for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
# UUID with js feature for WASM randomness
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Native-only dependencies (excluded for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Web framework - only for native backend server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
# ZIP compression - WASM-incompatible, handled in JavaScript
zip = "0.6"
# Logging - only for backend server
log = "0.4"
env_logger = "0.10"
# CLI - only for backend tools
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.8"

# WASM release profile optimized for size
[profile.release]
opt-level = "z"       # Optimize for size, not speed
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization (slower compile, smaller binary)
strip = true          # Remove debug symbols
panic = "abort"       # Skip unwind logic (saves ~10KB)

[[bin]]
name = "musicore-import"
path = "src/bin/musicore-import.rs"
